--- a/packages/boilerplate/package.json
+++ b/packages/boilerplate/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@lib-bones/boilerplate",
+  "private": true,
   "version": "1.0.0",
   "description": "Modern TypeScript library boilerplate",
   "main": "lib/index.js",
@@ -35,6 +36,7 @@
     "@babel/core": "^7.5.5",
     "@babel/node": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "@lib-bones/presets": "^1.0.0",
     "@slikts/rollup-plugin-rename-extensions": "0.0.4",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.6.8",
@@ -56,8 +58,5 @@
     "rollup-plugin-uglify": "^6.0.2",
     "rollup-plugin-url": "^2.2.2",
     "typescript": "^3.5.3"
-  },
-  "dependencies": {
-    "@lib-bones/presets": "^1.0.0"
   }
 }
