--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -36,7 +36,12 @@
     "@babel/core": "^7.5.5",
     "@babel/node": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "@lib-bones/presets": "^1.0.0",
+    "@lib-bones/preset-babel": "^1.0.0",
+    "@lib-bones/preset-eslint": "^1.0.0",
+    "@lib-bones/preset-jest": "^1.0.0",
+    "@lib-bones/preset-prettier": "^1.0.0",
+    "@lib-bones/preset-rollup": "^1.0.0",
+    "@lib-bones/preset-tsconfig": "^1.0.0",
     "@slikts/rollup-plugin-rename-extensions": "0.0.4",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.6.8",
@@ -58,5 +63,7 @@
     "rollup-plugin-uglify": "^6.0.2",
     "rollup-plugin-url": "^2.2.2",
     "typescript": "^3.5.3"
+  },
+  "dependencies": {
   }
 }
