--- a/package.json
+++ b/package.json
@@ -3,14 +3,22 @@
   "private": true,
   "devDependencies": {
     "lerna": "^3.16.4",
+    "npm-run-all": "^4.1.5",
+    "sync-glob": "^1.4.0",
     "typescript": "^3.5.3"
   },
   "scripts": {
-    "sync": "rsync -av --exclude='*.ts' src/ packages",
+    "sync": "sync-glob 'src/**/*' '!src/**/*.ts' packages",
+    "sync:watch": "sync-glob -w 'src/**/*' '!src/**/*.ts' packages",
+    "prebootstrap": "npm run sync",
     "bootstrap": "lerna bootstrap --hoist",
-    "pretest": "eslint packages",
+    "lint": "eslint .",
+    "pretest": "npm run lint",
     "test": "jest",
     "clean": "git clean -d -X -f packages",
-    "build": "tsc -b"
+    "prebuild": "npm run clean && npm run sync",
+    "build": "tsc -b",
+    "build:watch-ts": "tsc -w",
+    "build:watch": "run-p build:watch-ts sync:watch"
   }
 }
