--- a/src/preset-babel/package.json
+++ b/src/preset-babel/package.json
@@ -6,7 +6,7 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "peerDependencies": {
+    "dependencies": {
         "@babel/core": "^7.5.5",
         "@babel/node": "^7.5.5",
         "@babel/preset-env": "^7.5.5"
