--- a/src/preset-eslint/package.json
+++ b/src/preset-eslint/package.json
@@ -6,13 +6,17 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "peerDependencies": {
+    "dependencies": {
+        "@lib-bones/prettier": "^1.0.0",
         "@typescript-eslint/eslint-plugin": "^1.13.0",
         "@typescript-eslint/parser": "^1.13.0",
-        "eslint": "^5.16.0",
         "eslint-config-airbnb-base": "^13.2.0",
-        "eslint-config-prettier": "^6.0.0",
+        "eslint-config-prettier": "^6.0.0"
+    },
+    "peerDependencies": {
+        "eslint": "^5.16.0",
         "eslint-plugin-import": "^2.18.2",
-        "eslint-plugin-prettier": "^3.1.0"
-    }
+        "eslint-plugin-prettier": "^3.1.0",
+        "prettier": "^1.18.2"
+    }    
 }
