--- a/src/preset-jest/package.json
+++ b/src/preset-jest/package.json
@@ -7,7 +7,9 @@
     "author": "",
     "license": "ISC",
     "peerDependencies": {
-        "@types/jest": "^24.0.15",
         "jest": "^24.8.0"
+    },
+    "dependencies": {
+        "@types/jest": "^24.0.15"
     }
 }
