--- a/src/preset-rollup/package.json
+++ b/src/preset-rollup/package.json
@@ -6,9 +6,8 @@
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "peerDependencies": {
+    "dependencies": {
         "@slikts/rollup-plugin-rename-extensions": "0.0.4",
-        "rollup": "^1.17.0",
         "rollup-plugin-babel": "^4.3.3",
         "rollup-plugin-commonjs": "^10.0.1",
         "rollup-plugin-json": "^4.0.0",
@@ -16,5 +15,8 @@
         "rollup-plugin-terser": "^5.1.1",
         "rollup-plugin-uglify": "^6.0.2",
         "rollup-plugin-url": "^2.2.2"
+    },
+    "peerDependencies": {
+        "rollup": "^1.17.0"
     }
 }
