chore(release): publish

--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.0",
+  "version": "0.0.1",
   "command": {
     "publish": {
       "ignoreChanges": [
@@ -9,11 +9,13 @@
       "message": "chore(release): publish"
     },
     "bootstrap": {
-      "npmClientArgs": ["--no-package-lock"]
+      "npmClientArgs": [
+        "--no-package-lock"
+      ]
     }
   },
   "packages": [
-    "packages/*",
-    "boilerplate"
+    "boilerplate",
+    "packages/*"
   ]
 }
