--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@lib-bones/create",
-    "version": "1.0.0",
+    "version": "0.0.1",
     "description": "",
     "main": "index.js",
     "scripts": {
@@ -8,7 +8,5 @@
     },
     "keywords": [],
     "author": "",
-    "license": "ISC",
-    "peerDependencies": {
-    }
+    "license": "ISC"
 }
