--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -10,5 +10,8 @@
     "author": "",
     "license": "ISC",
     "peerDependencies": {
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
