--- a/packages/preset-babel/package.json
+++ b/packages/preset-babel/package.json
@@ -10,5 +10,8 @@
         "@babel/core": "^7.5.5",
         "@babel/node": "^7.5.5",
         "@babel/preset-env": "^7.5.5"
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
