--- a/packages/preset-prettier/package.json
+++ b/packages/preset-prettier/package.json
@@ -8,5 +8,8 @@
     "license": "ISC",
     "peerDependencies": {
         "prettier": "^1.18.2"
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
