--- a/packages/preset-tsconfig/package.json
+++ b/packages/preset-tsconfig/package.json
@@ -8,5 +8,8 @@
     "license": "ISC",
     "peerDependencies": {
         "typescript": "^3.5.3"
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
