--- a/packages/preset-eslint/package.json
+++ b/packages/preset-eslint/package.json
@@ -18,5 +18,8 @@
         "eslint-plugin-import": "^2.18.2",
         "eslint-plugin-prettier": "^3.1.0",
         "prettier": "^1.18.2"
-    }    
+    },
+    "publishConfig": {
+        "access": "public"
+    }
 }
