--- a/packages/preset-jest/package.json
+++ b/packages/preset-jest/package.json
@@ -11,5 +11,8 @@
     },
     "dependencies": {
         "@types/jest": "^24.0.15"
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
