--- a/packages/preset-rollup/package.json
+++ b/packages/preset-rollup/package.json
@@ -18,5 +18,8 @@
     },
     "peerDependencies": {
         "rollup": "^1.17.0"
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
