--- a/packages/create/package.json
+++ b/packages/create/package.json
@@ -2,9 +2,10 @@
     "name": "@lib-bones/create",
     "version": "0.1.0",
     "description": "",
-    "main": "index.js",
+    "main": "lib/index.js",
+    "typings": "lib/index.d.ts",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "prepublishOnly": "tsc"
     },
     "keywords": [],
     "author": "",
